new project idea...wireframes complete

--- a/form-page/form-page.html
+++ b/form-page/form-page.html
@@ -12,33 +12,61 @@
     <nav role="navigation">Nav</nav>
     <main role="main">
       <header>
-        <h1>Create a List</h1>
+        <h1>Add a TV Show</h1>
       </header>
       <section>
         <form>
           <div class="form-section">
-            <label>List Name</label>
+            <label>TV Show Name</label>
             <input type="text" required />
           </div>
           <div class="form-section">
-            <label>List Type</label>
+            <label>Category</label>
             <select name="list-options" id="list-options">
-              <option value="0">Select a List Type...</option>
-              <option value="1">Default List</option>
-              <option value="2">Custom List</option>
+              <option value="0">Select a Category...</option>
+              <option value="1">Plan to Watch</option>
+              <option value="2">Currently Watching</option>
+              <option value="3">Finished</option>
             </select>
+          <div class="form-section">
+              <label>Season No.</label>
+              <input type="number" />
+          </div>
+        <div class="form-section">
+            <label>Episode No.</label>
+            <input type="number" />
+        </div>
           </div>
           <div class="form-section">
-            <label>Date of Event (Will only be applicable for Custom Lists)</label>
-            <input type="date"/>
-          </div>
-          <div class="form-section">
-            <label>Item</label>
-            <input type="text" required />
-            <button type="button">Remove Item</button>
-            </br>
-            <button type="button">Add Item</button>
-          </div>
+              <label>Rating</label>
+              <select name="list-options" id="list-options">
+                <option value="0">Select a Rating...</option>
+                <option value="1">1 Stars</option>
+                <option value="2">2 Stars</option>
+                <option value="3">3 Stars</option>
+                <option value="4">4 Stars</option>
+                <option value="5">5 Stars</option>
+              </select>
+            </div>
+            <div class="form-section">
+                <label>Rating</label>
+                <select name="list-options" id="list-options">
+                  <option value="0">Select a Genre...</option>
+                  <option value="1">Action</option>
+                  <option value="2">Comedy</option>
+                  <option value="3">Drama</option>
+                  <option value="4">Horror</option>
+                  <option value="5">5 Thriller</option>
+                </select>
+              </div>
+            <div class="form-section">
+                <label>Description</label>
+                <input type="text" />
+            </div>
+            <div class="form-section">
+                  <label>Review</label>
+                  <input type="text" />
+            </div>
           <button type="submit">Submit</button>
           <button type="reset">Reset</button>
         </form>
