--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -7,30 +7,35 @@
     <link rel="stylesheet" type="text/css" href="landing-main.css">
 </head>
 <body>
-    <nav role="navigation">Nav</nav>
+    <nav role="navigation">Nav
+        <button id="login-button">Login</button>
+    </nav>
     <main role="main">
         <header role="banner">
-            <h1>Forget-Me-Not</h1>
-            <h2>never worry about leaving behind essentials...</h2>
+            <h1>TV Tracker</h1>
+            <p>Thinking of better name...This is a temporary name</p>
+            <h2>track and catalog your favorite TV shows...</h2>
         </header>
 
         <section>
-            <h3>Create Your Lists</h3>
-            <p>Forget-Me-Not allows you to create default and custom lists of items to take with you when you're leaving the house.
-               Going to school? Keep track of your school belongings. Planning on going camping? Create a list of camping essentials
-               to take with you before you leave for you trip!
+            <h3>Create Your TV Show Entries</h3>
+            <p>TV Tracker allows you to submit TV shows that you are planning to watch, currently watching, or completed!
+               Did a friend tell you about a good show to watch? Add it as an entry as a reminder to see later.
             </p>
         </section>
         <section>
-            <h3>Keep track of your lists</h3>
-            <p>Forget-Me-Not keeps a record of your lists so you can always have them on hand. Just remembered that you need
-               to bring toiletries for that road trip? Access your lists and add it. Now, you're covered!
+            <h3>Keep track of your Shows</h3>
+            <p>TV Tracker keeps a record of your TV shows so you can always have them on hand.  Are you having a hard time
+                    remembering which episode you left off for that one show? Keep track of it within the app? 
+                    Like seeing a list of all the TV shows you've watched? Go through your list and recommend one to a friend!
             </p>
         </section>
         <section>
-            <h3>Check-off your items</h3>
-            <p>Whether it's another day to the office or you're going to the beach, take a look at your list. As you pack or bring
-               your necessary items with you, check them off the list so you can keep track of what you have and you're still missing.
+            <h3>View Your Dashboard</h3>
+            <p>TV Tracker provides a convenient dashboard that displays useful and easily digestible information for you. Want to see
+                how many TV shows you are currently watching? Curious about how many shows you rated 5 stars? Or, perhaps you want to see
+                what your favorite TV show genre is? The dashboard is there for you so it takes all the leg work out of having to find 
+                out for yourself!
             </p>
         </section>
         <section>
