--- a/lists-page/lists-page.html
+++ b/lists-page/lists-page.html
@@ -12,50 +12,47 @@
     <nav role="navigation">Nav</nav>
     <main role="main">
       <header role="banner">
-        <h1>Default/Custom Lists</h1>
-        <p>(Will separate Default and Custom onto their own page, but content/style will be same)</p>
+        <h1>Plan to Watch / Currently Watching / Finished</h1>
+        <p>(Will separate onto their own page, but content/style will be same)</p>
+      </br>
+        <label>Search TV Show</label>
+        <input type="text"/>
+        <button>Search</button>
+        <select name="list-options" id="list-options">
+            <option value="0">Filter By</option>
+            <option value="1">Genre</option>
+            <option value="1">Rating</option>
+        </select>
+        <select name="list-options" id="list-options">
+            <option value="0">Sort By</option>
+            <option value="1">Name</option>
+            <option value="1">Rating</option>
+        </select>
       </header>
       <section>
-        <h2>School List (Expanded View)</h2>
-        <p>(Example of a default list...there is no date)</p>
+        <h2>Stranger Things (Expanded View)</h2>
         <ul>
-          <li>Backpack <button>Check Item</button></li>
-          <li>Phone <button>Check Item</button></li>
-          <li>Wallet <button>Check Item</button></li>
-          <li>House Keys <button>Check Item</button></li>
-          <li>Lunch Money <button>Check Item</button></li>
-          <li>Homework <button>Check Item</button></li>     
-          <li>Laptop <button>Check Item</button></li>          
-          <li> Math Textbook <button>Check Item</button></li>
+          <p>Season No. 3</p>
+          <p>Episode No. 7</p>
+          <P>Genre: Action/Thriller</P>
+          <p>Rating: 5 stars</p>
+          <p>Description: A group of ordinary kids have their lives turned upside down once they encounter the supernatural...</p>
+          <p>Review: This is one of my favorite shows! It's super suspenseful and has a great story.</p>
+          <!-- <img src="" alt="" /> Will possibly allow users to submit an image of the TV show as a FORM field that will populate in this img element-->
         </ul>
         <button>Edit</button>
         <button>Delete</button>
       </section>
       <section>
-          <h2>Camping Trip to Grand Canyon (Expanded View)</h2>
-          <p>(Example of a custom list...there is a date)</p>
-          <h3>11/11/2020</h3>
-          <ul>
-            <li>Duffle Bag <button>Check Item</button></li>
-            <li>Phone <button>Check Item</button></li>
-            <li>Wallet <button>Check Item</button></li>
-            <li>Car Keys <button>Check Item</button></li>
-            <li>Tent <button>Check Item</button></li>
-            <li>Sleeping Bag <button>Check Item</button></li>
-            <li>Toiletries <button>Check Item</button></li>
-          </ul>
+          <h2>Keeping Up With the Kardashians (Collapsed View)</h2>
+          <p>Season No. 1</p>
+          <p>Episode No. 3</p>
+          <p>Rating: 2 stars</p>
           <button>Edit</button>
           <button>Delete</button>
       </section>
-      <section>
-          <h2>Work List</h2>
-          <p>Collapsed View</p>
-          <button>Edit</button>
-          <button>Delete</button>
-      </section>
-      <button>Add New List</button>
+      <button>Add New TV Show</button>
     </main>
     <footer role="content-info">Footer</footer>
   </body>
-
 </html>
